lca - fix contrast in footer

--- a/LaChouetteAgency-optim/style.css
+++ b/LaChouetteAgency-optim/style.css
@@ -74,7 +74,7 @@ a:hover {
 
 .bg-repeat {
     background: repeat;
-}
+}bgc-atomic-tangerine
 
 .bg-t-edge {
     background: top no-repeat;
@@ -745,6 +745,10 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+}
+
+.black {
+    color: #000000 !important;
 }
 
 .paragraphe {
